--- a/Bootstrap/home.html
+++ b/Bootstrap/home.html
@@ -48,18 +48,18 @@
   <div class="container-fluid">
     <div class="row text-center" style="color:white;">
       <div class="col-md-4 col-12 col-sm-6">
-        <img data-src="https://res.cloudinary.com/dq2sec0lx/image/upload/v1589746569/321371_1100-1100x628_k6punh.jpg" class="img-fluid rounded-circle p-4 lazy" alt="Cat">
+        <img data-src="https://res.cloudinary.com/dq2sec0lx/image/upload/c_scale,w_600/v1589746569/321371_1100-1100x628_k6punh.jpg" class="img-fluid rounded-circle p-4 lazy" alt="Cat">
         <h2>Tasty Coffee</h2>
         <p>Most of all, we are committed to giving you the best customer service as well as a comfortable environment to sit with good friends, research study and work.</p>
         <a href="#" class="btn btn-warning">Coffee Selection</a>
       </div>
       <div class="col-md-4 col-12 col-sm-6">
-        <img data-src="https://res.cloudinary.com/dq2sec0lx/image/upload/v1589746597/coffee-191008-800x450_i0rjop.jpg" class="img-fluid rounded-circle p-4 lazy" alt="Cat">
+        <img data-src="https://res.cloudinary.com/dq2sec0lx/image/upload/c_scale,w_600/v1589746597/coffee-191008-800x450_i0rjop.jpg" class="img-fluid rounded-circle p-4 lazy" alt="Cat">
         <h2>Fast Cooking</h2>
         <p> Our preferred, straightforward and also unique method of developing cool coffee. </p>
       </div>
       <div class="col-md-4 col-12 col-sm-6">
-        <img data-src="https://res.cloudinary.com/dq2sec0lx/image/upload/v1589746614/food-delivery-corona-virus-3_xuegxc.jpg" class="img-fluid rounded-circle p-4 lazy" alt="Cat">
+        <img data-src="https://res.cloudinary.com/dq2sec0lx/image/upload/c_scale,w_600/v1589746614/food-delivery-corona-virus-3_xuegxc.jpg" class="img-fluid rounded-circle p-4 lazy" alt="Cat">
         <h2>Free Delivery</h2>
         <p>We are the Cafe with a bold vision to make a distinction in both our neighborhood and also worldwide neighborhoods.</p>
         <a href="#" class="btn btn-primary">Order Delivery</a>
