--- a/Bootstrap/final.html
+++ b/Bootstrap/final.html
@@ -8,6 +8,10 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mapbox-gl/1.10.1/mapbox-gl.css">
+    <link href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/final.css">
 
 
@@ -19,7 +23,6 @@
     <a href="#home" class="active">Home</a>
     <a href="#news">Stations</a>
     <a href="#contact">Contact</a>
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()"></a>
   </div>
 
   <div class="jumbotron">
@@ -30,13 +33,14 @@
   </div>
 
 
-
 <div class="container">
-  <h1>Sanitation Stations<h1>
+  <h1 class="ml6">
+    <span class="text-wrapper">
+      <span class="letters">Sanitation Stations</span>
+    </span>
+  </h1>
     <br>
 </div>
-
-
 
 
   <div class="container-fluid">
@@ -59,13 +63,32 @@
     </div>
   </div>
 
+<div class="container">
+  <div class="col-12"
+    <div class="row">
+      <div id="map"
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="footer">
+  <footer>
+    <p>Follow Us!</p>
+    <i class="fab fa-facebook" style="font-size:40px;color:blue;"></i>
+    <i class="fab fa-twitter" style="font-size:40px;color:lightblue;"></i>
+  </footer>
+</div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-    <script src="custom.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mapbox-gl/1.10.1/mapbox-gl.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+    <script src="../Javascript/custom.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanilla-lazyload@16.0.0/dist/lazyload.min.js"></script>
     <script type="text/javascript">
     var lazyLoadInstance = new LazyLoad({
